# webaggregator

./: Cargo.toml  Dockerfile
.github/workflows/: ci-cd.yml
src/: main.rs  models.rs
src/api/: models.rs  tools.rs
src/handlers/: balance.rs  errors.rs  events.rs  orders.rs  position.rs
templates/: base.html  currencies.html
templates/events/: msgsend.html
