[package]
name = "webaggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-gzip"] }
sqlx = { version = "0.9", default-features = false,  features = ["postgres", "runtime-tokio", "chrono", "tls-rustls", "macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.53", default-features = false, features = ["rt-multi-thread", "macros"] }
askama = { version = "0.16", default-features = false, features = ["serde_json", "derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
dotenvy =  { version = "0.15", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json"] }
tracing-appender = { version = "0.2", default-features = false }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[profile.test]
inherits = "dev"
opt-level = 1